other-vpol/enforce-readwriteonce-pod/.chainsaw-test/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rwop-exceptions
