other-vpol/enforce-readwriteonce-pod/.chainsaw-test/pvc-protected.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: protected-pvc
  namespace: rwop-exceptions
spec:
  accessModes: [ReadWriteOnce]
  resources:
    requests:
      storage: 1Gi
